<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".TripInProgressFragment">

    <com.kvl.cyclotrack.MeasurementView
        xmlns:measurement_view="http://schemas.android.com/apk/res/com.kvl.cyclotrack"
        android:id="@+id/textview_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        measurement_view:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/textview_heart_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/textview_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/textview_average_speed"
        app:layout_constraintEnd_toStartOf="@id/textview_split_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_distance" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/textview_split_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textview_heart_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_heart_rate" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/textview_average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toTopOf="@id/textview_time"
        app:layout_constraintEnd_toStartOf="@id/textview_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_heart_rate" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/textview_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toBottomOf="@id/textview_average_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_average_speed" />

    <com.kvl.cyclotrack.MeasurementView
        android:id="@+id/textview_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_speed" />

    <TextView
        android:id="@+id/textview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_placeholder"
        android:textAppearance="@style/DashboardFontAppearance"
        app:layout_constraintBottom_toBottomOf="@id/textview_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textview_duration" />

    <ImageView
        android:id="@+id/image_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_fix_obtained"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:fontFamily="@font/orbitron_medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/image_tracking"
        app:layout_constraintEnd_toStartOf="@id/textview_time"
        app:layout_constraintStart_toEndOf="@id/image_tracking"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/pause_label"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:fontFamily="@font/orbitron_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:text="@string/stop_label"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:fontFamily="@font/orbitron_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resume_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/resume_button"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:textAppearance="@style/DashboardFontAppearance"
        android:text="@string/resume_label"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:fontFamily="@font/orbitron_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/stop_button" />

</androidx.constraintlayout.widget.ConstraintLayout>